vcuhunt/static/sass/project.scss
// project specific CSS goes here

////////////////////////////////
		//Variables//
////////////////////////////////

// Alert colors

$white: #fff;
$mint-green: #d6e9c6;
$black: #000;
$pink: #f2dede;
$dark-pink: #eed3d7;
$red: #b94a48;

////////////////////////////////
		//Alerts//
////////////////////////////////

// bootstrap alert CSS, translated to the django-standard levels of
// debug, info, success, warning, error

.alert-debug {
  background-color: $white;
  border-color: $mint-green;
  color: $black;
}

.alert-error {
  background-color: $pink;
  border-color: $dark-pink;
  color: $red;
}


* {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  padding: 0;
}

body {
overflow-x:hidden;
}

header {
  height: 30px;
  background-color: black;
  width: 100vw;
  position: fixed;
  margin: 0;
  top: 0;
  left: 0;
  z-index: 1;
}

.slideshow {
  height: 100%;
  width:100%;
  margin: 0;
  padding:0;
  position: absolute;
  top:30px;
  bottom:0;
}

/** {box-sizing:border-box}

/* Hide the images by default */
.mySlides {
display: none;
}

.mySlides img {
  width:100vw;
  height:100vh;
  object-fit: cover;
}

/* Next & previous buttons */
.prev, .next {
cursor: pointer;
position: absolute;
top: 50%;
width: auto;
margin-top: -22px;
padding: 16px;
color: white;
font-weight: bold;
font-size: 18px;
transition: 0.6s ease;
border-radius: 0 3px 3px 0;
user-select: none;
}

/* Position the "next button" to the right */
.next {
right: 0;
border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
color: #f2f2f2;
font-size: 15px;
padding: 8px 12px;
position: absolute;
bottom: 8px;
width: 100%;
text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
color: #f2f2f2;
font-size: 12px;
padding: 8px 12px;
position: absolute;
top: 0;
}

/* The dots/bullets/indicators */
.dot {
cursor: pointer;
height: 15px;
width: 15px;
margin: 0 2px;
background-color: #bbb;
border-radius: 50%;
display: inline-block;
transition: background-color 0.6s ease;
}

.active, .dot:hover {
background-color: #717171;
}

/* Fading animation */
.fade {
-webkit-animation-name: fade;

-webkit-animation-duration: 6s;
animation-name: fade;
animation-duration: 6s;
}

@-webkit-keyframes fade {
from {opacity: .7}
to {opacity: 1}
}

@keyframes fade {
  from {opacity: .7}
  to {opacity: 1}
}

.welcome {
  width:100vw;
  height:100vh;
  background-color: rgba(0,0,0,0.6);
  z-index: 1;
  position: relative;
  top:0;
  bottom:0;
  text-align: center;
  padding-top: 50vh;
  font-size: 3em;
  line-height: 1em;
  color: silver;

  @media screen and (max-width: 500px)
  {
    font-size: 1.5em;
  }

  h1 {
    font-size: 2.5em;
    margin-bottom:0;
  }

}


footer {
background-color:seagreen;
color:white;
width: 100vw;
height: 10vh;
position: relative;
z-index: 2;
margin: 0;
padding: 1em;
}

.preview {
width:100vw;
height:50vh;
position: relative;
object-fit: fill;
}

.preview img {
width:100%;
height:100%;
object-fit: cover;
}

.preview div {
background-color: rgba(0,0,0,0.6);
z-index: 1;
width: 100%;
height: 100%;
top:0%;
position: absolute;
}

.preview div h1 {
top:100%;
left:2em;
transform: translate(0,-100%);
position: absolute;
color: silver;
font-size: 3em;
}

.cardcontainer {
display: grid;
grid-template-columns: 1fr 1fr;
grid-gap: 3em 1em;
position: relative;
background-color:#EEEEEE;
padding: 2em;
}

.card {
background:white;
border-radius: 1em;
border: 2px solid seagreen;
height: 30vh;
width: 40vw;
margin: auto;
}

.landmark {
display: grid;
grid-template-columns: 2fr 1fr;
grid-gap: 0 1em;
background-color: #EEEEEE;
font-size: 2em;
position: relative;
min-height:90vh;
}

.landmark img {
width: 100%;
height:100%;
object-fit: cover;
margin:0;
position: relative;
}

.landmark div {
text-align: center;
}
.landmark div h4 {
color: seagreen;
position: relative;
}
.landmark button {
  font-size: 1em;
}

.landmark .map {
  margin-top: 1em;
  margin-bottom: 2em;
  border: 2px solid black;
  display: none;
}

#quiz {
  position: absolute;
  background-color: #EEEEEE;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  font-size: 25px;
  display: none;
  padding: 1em;
  border: 2px solid silver;
  border-radius: 20px;
  z-index: 2;
}

@media screen and (max-width: 500px) {
  #quiz {
    font-size: 15px;
    padding: 0.5em;
  }
}

#quizbackground {
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.8);
  display: none;
  z-index: 1;
  top: 0;
  left:0;
}


.start {
  border-radius: 5px;
  background: grey;
  font-size: 24px;
  text-transform: uppercase; 
  padding: 7px;
  color: white;
  border: 0 solid white; 
  display: flex; 
  flex-flow: row wrap; 
  width: 100%; 
  max-width: 200px; 
  margin: auto; 
  justify-content: center;
  align-items: center;
}

.start:hover {
  @extend .start; 
  box-shadow: 0 1px 4px white;
  transform: translateY(-1px);
}


.container { 
  width: 80%; 
  margin: auto; 
  max-width: 1500px; 
  display: flex;
  margin-top: 130px; //fix footer placement
  margin-bottom:100px;
}

body {
  font-family: Helvetica, Arial, sans-serif;
}

.account-container {
  display: flex;
  flex-flow: column wrap; 
  justify-content: center;
  align-items: center;
  margin: auto; 
}

.landmark-list {
  display: flex;
  flex-flow: column nowrap; 
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%; 
  margin: auto; 
  contain: content; 

  &__container {
    display: flex;
    flex-flow: row wrap; 
    justify-content: space-evenly;
    align-items: center;
    width: 100%; 
  }

  &__card {
    margin: 50px auto; 
    height: 400px; 
    width: 100%; 
    max-width: 400px; 
    flex-grow: 1;
    border-radius: 10px; 
    display: flex;
    align-items: center;
    justify-content: center;
    opacity: .8; 
    display: flex;
    flex-flow: column nowrap; 
    justify-content: flex-end;
    box-shadow: 1px 3px 5px grey;
  }
  
  &__title {
    padding: 10px; 
    background-color: white; 
    font-size: 24px; 
    font-weight: 400;
    color: black; 
    width: 100%; 
    border-radius: 0 0 10px 10px; 
    display: flex;
    flex-flow: row wrap; 
    justify-content: space-between;
  }

  &__button {
    border-radius: 5px; 
    background-color: blue; 
    color:white; 
    text-align: center;
    width: 100px; 
    line-height: 1.5;
  }
}

#aboutgrid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 1.5em;
  column-gap: 4em;
  top: 30px;
  height:100vh;
  position: relative;
  background-image: url(../images/landmarks/img2.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  color: white;

  @media screen and (max-width: 500px) {
    div p{
     font-size: 15px;
    }
  }
}





@media screen and (max-width: 576px) {
  .landmark {
    grid-template-columns: 1fr;
    justify-content: center;
    font-size: 1em;

    & h1 {
      font-size: 2em;
    }

    & h3 {
      font-size: 1.5em;
    }
  }

  .container {
    width: 100%;
  }

  iframe {
    width: 100%;
  }
}

